--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
+		<link rel="manifest" crossorigin="use-credentials" href="manifest.json">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="robots" content="follow, index" />
 		<title>SpaceX Launches | SvelteKit and Vercel</title>
